<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:text="@string/titulo_app"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/cor_destaque"/>

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format24Hour="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
        android:textColor="@color/texto_secundario"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAumentarSegundo"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/desc_aumentar_segundo"
        app:icon="@drawable/outline_arrow_circle_up_24"
        app:layout_constraintBottom_toTopOf="@+id/btnDiminuirSegundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTimer"
        app:layout_constraintTop_toTopOf="@+id/editTextTimer"
        app:layout_constraintVertical_chainStyle="packed"
        app:iconTint="@color/texto_primario"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiminuirSegundo"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_diminuir_segundo"
        app:icon="@drawable/outline_arrow_circle_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTimer"
        app:layout_constraintEnd_toEndOf="@+id/btnAumentarSegundo"
        app:layout_constraintStart_toStartOf="@+id/btnAumentarSegundo"
        app:layout_constraintTop_toBottomOf="@+id/btnAumentarSegundo"
        app:iconTint="@color/texto_primario"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAumentarMinuto"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/desc_aumentar_minuto"
        app:icon="@drawable/outline_arrow_circle_up_24"
        app:layout_constraintBottom_toTopOf="@+id/btnDiminuirMinuto"
        app:layout_constraintEnd_toStartOf="@+id/editTextTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTimer"
        app:layout_constraintVertical_chainStyle="packed"
        app:iconTint="@color/texto_primario"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiminuirMinuto"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_diminuir_minuto"
        app:icon="@drawable/outline_arrow_circle_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTimer"
        app:layout_constraintEnd_toEndOf="@+id/btnAumentarMinuto"
        app:layout_constraintStart_toStartOf="@+id/btnAumentarMinuto"
        app:layout_constraintTop_toBottomOf="@+id/btnAumentarMinuto"
        app:iconTint="@color/texto_primario"/>

    <EditText
        android:id="@+id/editTextTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/timer_hint"
        android:inputType="phone"
        android:digits="0123456789:"
        android:maxLength="5"
        android:padding="16dp"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock"
        tools:ignore="HardcodedText"
        android:textColor="@color/texto_primario"
        android:textColorHint="@color/texto_secundario"
       />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/botao_iniciar"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimer"
        android:textColor="@color/cor_destaque_texto"
        app:backgroundTint="@color/cor_destaque"
        app:iconTint="@color/cor_destaque_texto"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPausar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/botao_pausar"
        app:layout_constraintEnd_toStartOf="@+id/btnZerar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
        android:textColor="@color/texto_primario"
        app:strokeColor="@color/texto_secundario" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnZerar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/botao_zerar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPausar"
        app:layout_constraintTop_toTopOf="@+id/btnPausar"
        android:textColor="@color/texto_primario"
        app:strokeColor="@color/texto_secundario"
        />
</androidx.constraintlayout.widget.ConstraintLayout>